# liftplanner

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  build-appimage.sh  build.sh  create_files.py  database.puml  generate_json.py  generate_key.sh  sign.sh
.claude/: TODO.md
android/: AndroidManifest.xml
doc/: architecture-for-llm.md  models-refactoring-plan.md  project-context.md  refactoring-plan.md  todo.md
script/: backup.sh
src/: CMakeLists.txt  liftplannerapplication.cpp  liftplannerapplication.h  logging.cpp  logging.h  main.cpp
src/core/: CMakeLists.txt  types.h
src/core/storage/: appdbstorage.cpp  appdbstorage.h
src/data/: gpt_prompt_template.txt
src/lib/: CMakeLists.txt  filewatcher.cpp  filewatcher.h
src/models/: exercisemodel.cpp  exercisemodel.h  setmodel.cpp  setmodel.h  types.h  workoutmodel.cpp  workoutmodel.h
src/modules/userprofile/: CMakeLists.txt
src/modules/userprofile/application/: userprofileservice.cpp  userprofileservice.h
src/modules/userprofile/domain/entities/: experiencelevel.h  primarygoal.h  sex.h  unitsystem.h  userprofile.cpp  userprofile.h
src/modules/userprofile/domain/repositories/: userprofilerepository.h
src/modules/userprofile/infrastructure/database/: userprofilerepositorydb.cpp  userprofilerepositorydb.h
src/modules/userprofile/infrastructure/serializers/: userprofileserializer.cpp  userprofileserializer.h
src/modules/workout/: CMakeLists.txt
src/modules/workout/application/: workoutservice.cpp  workoutservice.h
src/modules/workout/domain/entities/: exercise.cpp  exercise.h  set.cpp  set.h  workout.cpp  workout.h  workoutstatus.h
src/modules/workout/domain/repositories/: exercisequery.cpp  exercisequery.h  exerciserepository.h  setquery.cpp  setquery.h  setrepository.h  workoutquery.cpp  workoutquery.h  workoutrepository.h
src/modules/workout/infrastructure/database/: exerciserepositorydb.cpp  exerciserepositorydb.h  setrepositorydb.cpp  setrepositorydb.h  workoutrepositorydb.cpp  workoutrepositorydb.h
src/modules/workout/infrastructure/serializers/: exerciseserializer.cpp  exerciseserializer.h  setserializer.cpp  setserializer.h  workoutserializer.cpp  workoutserializer.h
src/repositories/: exercisedbrepository.cpp  exercisedbrepository.h  genericdbrepository.cpp  genericdbrepository.h  setdbrepository.cpp  setdbrepository.h  templatedbrepository.h  workoutdbrepository.cpp  workoutdbrepository.h
src/services/: activeworkoutservice.cpp  activeworkoutservice.h  routineservice.cpp  routineservice.h  workouthistoryservice.cpp  workouthistoryservice.h  workoutservice.cpp  workoutservice.h
src/storage/: appdbstorage.cpp  appdbstorage.h
src/ui/: ActiveWorkoutExerciseItem.qml  ActiveWorkoutSetItem.qml  BottomNavigation.qml  CMakeLists.txt  ColoredSvgImage.qml  DebugRectangle.qml  ExerciseItem.qml  HistoryMonthSection.qml  Main.qml  MainView.qml  NotificationPopup.qml  PlannedWorkoutItem.qml  PrimaryButton.qml  RestDialog.qml  RoutineItem.qml  ScreenActiveWorkout.qml  ScreenHistory.qml  ScreenHome.qml  ScreenPlannedWorkouts.qml  ScreenProfile.qml  ScreenRoutines.qml  ScreenWorkout.qml  ScreenWorkouts.qml  SectionHeader.qml  StatTile.qml  Theme.qml  ValueEditorDialog.qml  WorkoutButtonsRow.qml  WorkoutCard.qml  WorkoutCardTitle.qml  WorkoutExerciseList.qml  WorkoutItem.qml  WorkoutLabel.qml  WorkoutListView.qml
src/ui/icons/: CMakeLists.txt  icons.qrc
src/ui/models/: CMakeLists.txt  exercisemodel.cpp  exercisemodel.h  setmodel.cpp  setmodel.h  workoutmodel.cpp  workoutmodel.h
src/ui/viewmodels/: CMakeLists.txt  activeworkoutviewmodel.cpp  activeworkoutviewmodel.h  plannedworkoutviewmodel.cpp  plannedworkoutviewmodel.h  routineviewmodel.cpp  routineviewmodel.h  userprofileviewmodel.cpp  userprofileviewmodel.h  workouthistoryviewmodel.cpp  workouthistoryviewmodel.h
src/utils/: clipboardhelper.cpp  clipboardhelper.h  coloredsvgprovider.cpp  coloredsvgprovider.h  notificationtypes.cpp  notificationtypes.h  serializationutils.cpp  serializationutils.h  variantmapvalidator.cpp  variantmapvalidator.h  workoutjson.cpp  workoutjson.h  workouttext.cpp  workouttext.h
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  active_workout_test.cpp  main.cpp  planned_workout_test.cpp  testapplication.cpp  testapplication.h  workout_lifecycle_test.cpp
tests/integration/fixtures/: test_data.h
tests/userprofile/: CMakeLists.txt
tests/userprofile/application/: userprofileservicetest.cpp
tests/userprofile/domain/entities/: userprofiletest.cpp
tests/userprofile/infrastructure/database/: userprofilerepositorydbtest.cpp
tests/userprofile/infrastructure/serializers/: userprofileserializertest.cpp
tests/workout/: CMakeLists.txt
tests/workout/application/: workoutservicetest.cpp
tests/workout/domain/entities/: exercisetest.cpp  settest.cpp  workouttest.cpp
tests/workout/infrastructure/database/: exerciserepositorydbtest.cpp  setrepositorydbtest.cpp  workoutrepositorydbtest.cpp
tests/workout/infrastructure/serializers/: exerciseserializertest.cpp  setserializertest.cpp  workoutserializertest.cpp
